fixed ags drop shadow clipping

--- a/ags/scss/app-launcher.scss
+++ b/ags/scss/app-launcher.scss
@@ -40,7 +40,7 @@ window#app_launcher {
   .al-out-box {
     background: $base00;
     padding: 0.6rem;
-    margin: 0.2rem;
+    margin: 0.4rem;
     border-radius: 4px;
     box-shadow: 0 0 2px 2px #050505;
 
