--- a/ags/scss/control-panel.scss
+++ b/ags/scss/control-panel.scss
@@ -145,7 +145,7 @@ window#control_panel {
 
   .control-box {
     background: $base00;
-    margin: 0.2rem;
+    margin: 0.4rem;
     border-radius: 4px;
     box-shadow: 0 0 2px 2px #050505;
     padding: 0.6rem;
